--- a/.github/workflows/lint-format.yml
+++ b/.github/workflows/lint-format.yml
@@ -3,32 +3,18 @@ name: Lint and Format
 on: [push, pull_request]
 
 jobs:
-  lint:
-    name: Lint
+  ruff:
+    name: Lint and Format with Ruff
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
-          python-version: '3.12'
-      - name: Install Flake8
-        run: pip install flake8
-      - name: Run Flake8
-        run: flake8 .
-
-  format:
-    name: Format
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-      - name: Set up Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: '3.12'
-      - name: Install Black and isort
-        run: pip install black isort
-      - name: Check formatting with Black
-        run: black --check .
-      - name: Check import sorting with isort
-        run: isort --check-only .
+          python-version: '3.10'
+      - name: Install Ruff
+        run: pip install ruff
+      - name: Run Ruff (lint)
+        run: ruff check .
+      - name: Run Ruff (format)
+        run: ruff format --check .
